Updated my about me page, added image, and created route

--- a/front-end/.env
+++ b/front-end/.env
@@ -9,3 +9,5 @@ PORT=7002
 
 # REACT_APP_SERVER_HOSTNAME=https://my.api.mockaroo.com/messages.json?key=d9ddfc40
 REACT_APP_SERVER_HOSTNAME=http://localhost:5002
+
+DB_CONNECTION_STRING=mongodb://admin:secret@localhost:27017/your-database-name
